# beaver

./: .gitignore  CMakeLists.txt
include/: config.h  datastream.h  helper.h
src/: config.cc  datastream.cc  main.cc
